test/src/e2e_vm_tests/test_programs/should_fail/nested_functions/src/main.sw
script;

struct Data {
    value: u64
}

impl Data {
    fn the_value(self) -> u64 {
        fn double(n: u64) -> u64 {
            n // + n
        }

        double(self.value)
    }
}

fn main() {
    fn bla() { }
}
